--- a/framework-parent/framework-common/survey-event/pom.xml
+++ b/framework-parent/framework-common/survey-event/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.lego.feign</groupId>
             <artifactId>survey-feign</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
     </dependencies>
 
