--- a/framework-parent/framework-common/survey-feign/pom.xml
+++ b/framework-parent/framework-common/survey-feign/pom.xml
@@ -30,13 +30,13 @@
         <dependency>
             <groupId>com.lego.common</groupId>
             <artifactId>lib-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.lego.swagger</groupId>
             <artifactId>lib-swagger</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
         <dependency>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
-            <version>1.1.2-beta5</version>
+            <version>${easy.excel.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
