--- a/framework-parent/framework-common/survey-permission/pom.xml
+++ b/framework-parent/framework-common/survey-permission/pom.xml
@@ -17,13 +17,13 @@
         <dependency>
             <groupId>com.lego.feign</groupId>
             <artifactId>survey-feign</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.lego.base</groupId>
             <artifactId>survey-base</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
     </dependencies>
