--- a/framework-parent/framework-component/survey-configserver/pom.xml
+++ b/framework-parent/framework-component/survey-configserver/pom.xml
@@ -12,13 +12,6 @@
     <artifactId>survey-configserver</artifactId>
     <description>配置中心</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
-        <spring.boot.admin.version>2.0.1</spring.boot.admin.version>
-        <version.scca>1.0.0-RELEASE</version.scca>
-    </properties>
-
     <dependencies>
 
         <!-- web -->
@@ -72,7 +65,7 @@
 
         <dependency>
             <groupId>com.lego.log</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>lib-log</artifactId>
         </dependency>
 
@@ -113,19 +106,6 @@
 
 
     </dependencies>
-
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
 
     <build>
