--- a/framework-parent/framework-component/survey-eureka/pom.xml
+++ b/framework-parent/framework-component/survey-eureka/pom.xml
@@ -12,12 +12,6 @@
     <artifactId>survey-eureka</artifactId>
     <description>注册管理服务</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <discovery.plugin.version>4.2.5</discovery.plugin.version>
-        <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
-        <spring.boot.admin.version>2.0.1</spring.boot.admin.version>
-    </properties>
 
     <dependencies>
 
@@ -81,7 +75,7 @@
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
-            <version>1.19.1</version>
+            <version>${jersey.version}</version>
         </dependency>
 
         <dependency>
@@ -91,21 +85,6 @@
 
 
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-
-
-        </dependencies>
-    </dependencyManagement>
 
 
     <build>
