--- a/framework-parent/framework-component/survey-monitor/pom.xml
+++ b/framework-parent/framework-component/survey-monitor/pom.xml
@@ -12,12 +12,6 @@
     <artifactId>survey-monitor</artifactId>
     <description>监控平台(SpringBootAdmin)</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <spring.boot.admin.version>2.0.1</spring.boot.admin.version>
-        <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
-    </properties>
-
     <dependencies>
 
         <dependency>
@@ -66,38 +60,16 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.2</version>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.lego.log</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>lib-log</artifactId>
         </dependency>
 
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>0.2.1.RELEASE</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-        </dependencies>
-    </dependencyManagement>
 
 
     <build>
