--- a/framework-parent/framework-component/survey-zuul/pom.xml
+++ b/framework-parent/framework-component/survey-zuul/pom.xml
@@ -13,11 +13,6 @@
     <description>网关(Zuul)</description>
     <artifactId>survey-zuul</artifactId>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <spring.cloud.version>Finchley.SR1</spring.cloud.version>
-        <spring.boot.admin.version>2.1.0</spring.boot.admin.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -87,35 +82,23 @@
         <dependency>
             <groupId>com.lego.log</groupId>
             <artifactId>lib-log</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.lego.swagger</groupId>
             <artifactId>lib-swagger</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.lego.base</groupId>
             <artifactId>survey-base</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <plugins>
