--- a/survey-parent/survey-auth-impl/pom.xml
+++ b/survey-parent/survey-auth-impl/pom.xml
@@ -11,14 +11,6 @@
     <groupId>com.lego.auth</groupId>
     <artifactId>survey-auth-impl</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <properties>
-        <spring.cloud.oath2.version>1.2.1.RELEASE</spring.cloud.oath2.version>
-        <spring.security.jwt.version>1.0.9.RELEASE</spring.security.jwt.version>
-        <spring.boot.admin.version>2.0.1</spring.boot.admin.version>
-        <zipkin.stream.version>1.3.4.RELEASE</zipkin.stream.version>
-        <jjwt.version>0.9.1</jjwt.version>
-            <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
-    </properties>
 
     <dependencies>
         <!--  spring cloud -->
@@ -64,7 +56,6 @@
         </dependency>
 
 
-
         <!--  redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -89,31 +80,31 @@
         <dependency>
             <groupId>com.lego.event</groupId>
             <artifactId>survey-event</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.lego.base</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>survey-base</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.lego.swagger</groupId>
             <artifactId>lib-swagger</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.lego.feign</groupId>
             <artifactId>survey-feign</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.lego.log</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>lib-log</artifactId>
         </dependency>
 
@@ -121,23 +112,21 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.15</version>
+            <version>${mysql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.lego.mybatis</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>lib-mybatis</artifactId>
         </dependency>
 
 
         <dependency>
             <groupId>com.lego.common</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>lib-common</artifactId>
         </dependency>
-
-
 
 
         <!-- client 依赖 -->
@@ -158,81 +147,68 @@
                     </execution>
                 </executions>
             </plugin>
-           <!-- <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <configuration>
-                    <imageName>${project.artifactId}</imageName>
-                    <imageTags>
-                        <imageTag>latest</imageTag>
-                    </imageTags>
-                    <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
-                </configuration>
-            </plugin>
+            <!-- <plugin>
+                 <groupId>com.spotify</groupId>
+                 <artifactId>docker-maven-plugin</artifactId>
+                 <version>1.0.0</version>
+                 <configuration>
+                     <imageName>${project.artifactId}</imageName>
+                     <imageTags>
+                         <imageTag>latest</imageTag>
+                     </imageTags>
+                     <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
+                     <resources>
+                         <resource>
+                             <targetPath>/</targetPath>
+                             <directory>${project.build.directory}</directory>
+                             <include>${project.build.finalName}.jar</include>
+                         </resource>
+                     </resources>
+                 </configuration>
+             </plugin>
 
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.1</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            &lt;!&ndash;运行jar包时运行的主类，要求类全名&ndash;&gt;
-                            <mainClass>com.lego.survey.auth.impl.AuthServiceApplication</mainClass>
-                            &lt;!&ndash; 是否指定项目classpath下的依赖 &ndash;&gt;
-                            <addClasspath>true</addClasspath>
-                            &lt;!&ndash; 指定依赖的时候声明前缀 &ndash;&gt;
-                            <classpathPrefix>./</classpathPrefix>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <finalName>${project.artifactId}-${project.version}</finalName>
-                    <descriptor>${project.basedir}/src/main/assembly/assembly.xml</descriptor>
-                    <appendAssemblyId>false</appendAssemblyId>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
--->
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-jar-plugin</artifactId>
+                 <version>2.3.1</version>
+                 <configuration>
+                     <archive>
+                         <manifest>
+                             &lt;!&ndash;运行jar包时运行的主类，要求类全名&ndash;&gt;
+                             <mainClass>com.lego.survey.auth.impl.AuthServiceApplication</mainClass>
+                             &lt;!&ndash; 是否指定项目classpath下的依赖 &ndash;&gt;
+                             <addClasspath>true</addClasspath>
+                             &lt;!&ndash; 指定依赖的时候声明前缀 &ndash;&gt;
+                             <classpathPrefix>./</classpathPrefix>
+                         </manifest>
+                     </archive>
+                 </configuration>
+             </plugin>
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-assembly-plugin</artifactId>
+                 <version>2.6</version>
+                 <configuration>
+                     <finalName>${project.artifactId}-${project.version}</finalName>
+                     <descriptor>${project.basedir}/src/main/assembly/assembly.xml</descriptor>
+                     <appendAssemblyId>false</appendAssemblyId>
+                 </configuration>
+                 <executions>
+                     <execution>
+                         <id>make-assembly</id>
+                         <phase>package</phase>
+                         <goals>
+                             <goal>single</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+             </plugin>
+ -->
 
 
         </plugins>
     </build>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
 
 
 </project>
