--- a/survey-parent/survey-project-impl/pom.xml
+++ b/survey-parent/survey-project-impl/pom.xml
@@ -12,12 +12,6 @@
     <version>0.0.1-SNAPSHOT</version>
     <artifactId>survey-project-impl</artifactId>
 
-    <properties>
-        <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
-        <java.version>1.8</java.version>
-        <spring.boot.admin.version>2.0.1</spring.boot.admin.version>
-    </properties>
-
     <dependencies>
 
         <!-- spring cloud -->
@@ -86,7 +80,7 @@
 
         <dependency>
             <groupId>com.lego.base</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>survey-base</artifactId>
         </dependency>
 
@@ -94,7 +88,7 @@
         <dependency>
             <groupId>com.lego.event</groupId>
             <artifactId>survey-event</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
 
@@ -102,20 +96,20 @@
         <dependency>
             <groupId>com.lego.feign</groupId>
             <artifactId>survey-feign</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.lego.log</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>lib-log</artifactId>
         </dependency>
 
 
         <dependency>
             <groupId>com.lego.permission</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${service.version}</version>
             <artifactId>survey-permission</artifactId>
         </dependency>
 
@@ -195,18 +189,6 @@
 
         </plugins>
     </build>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
 
 </project>
