--- a/framework-parent/framework-component/survey-gateway/pom.xml
+++ b/framework-parent/framework-component/survey-gateway/pom.xml
@@ -83,11 +83,11 @@
         </dependency>
 
 
-        <!--  <dependency>
+          <dependency>
               <groupId>com.alibaba.nacos</groupId>
               <artifactId>nacos-client</artifactId>
               <version>0.4.0</version>
-          </dependency>-->
+          </dependency>
 
 
         <dependency>
