--- a/framework-parent/framework-common/survey-feign/pom.xml
+++ b/framework-parent/framework-common/survey-feign/pom.xml
@@ -25,6 +25,12 @@
             <version>1.4.6.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
 
         <!-- lib -->
         <dependency>
