--- a/framework-parent/framework-component/survey-zuul/src/main/resources/bootstrap.yml
+++ b/framework-parent/framework-component/survey-zuul/src/main/resources/bootstrap.yml
@@ -1,5 +1,15 @@
 server:
   port: 50010
+  undertow:
+    max-http-post-size: 0
+    # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程,数量和CPU 内核数目一样即可
+    io-threads: 8
+    worker-threads: 64    #阻塞任务线程池, 当执行类似servlet请求阻塞操作, undertow会从这个线程池中取得线程,它的值设置取决于系统的负载  io-threads*8
+    # 以下的配置会影响buffer,这些buffer会用于服务器连接的IO操作,有点类似netty的池化内存管理
+    # 每块buffer的空间大小,越小的空间被利用越充分
+    buffer-size: 1024
+    # 是否分配的直接内存
+    direct-buffers: true
   servlet:
     context-path: /survey
 spring:
@@ -22,3 +32,14 @@ feign:
 define:
   zuul:
     gray: false
+
+
+zuul:
+  semaphore:
+    max-semaphores: 500  # 隔离策略  Semaphore 生效
+  thread-pool:
+    use-separate-thread-pools: true
+  ribbon-isolation-strategy: thread
+  host:
+    max-total-connections: 500
+    max-per-route-connections: 50
