--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <properties>
         <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
         <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
-        <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
         <spring.boot.openfeign.version>2.0.0.RELEASE</spring.boot.openfeign.version>
         <spring.boot.admin.version>2.0.1</spring.boot.admin.version>
         <java.version>1.8</java.version>
@@ -28,6 +27,7 @@
         <cloud.ribbon.version>2.1.0</cloud.ribbon.version>
         <jersey.version>1.19.1</jersey.version>
         <spring.tx.version>5.1.2.RELEASE</spring.tx.version>
+
     </properties>
 
     <groupId>com.lego</groupId>
@@ -81,6 +81,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
