fixed bug 基准点增删查改

--- a/framework-parent/framework-common/survey-feign/pom.xml
+++ b/framework-parent/framework-common/survey-feign/pom.xml
@@ -32,6 +32,13 @@
         </dependency>
 
 
+        <!--<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel</artifactId>
+        </dependency>-->
+
+
+
         <!-- lib -->
         <dependency>
             <groupId>com.lego.common</groupId>
